:lipstick: Fix Dark Mode Product page

--- a/leblanc/components/Product/AddToCart/AddToCart.module.css
+++ b/leblanc/components/Product/AddToCart/AddToCart.module.css
@@ -7,3 +7,9 @@
     @apply text-gray-500;
   }
 }
+
+:global(.dark) {
+  & .root {
+    @apply border-primary;
+  }
+}
