--- a/leblanc/components/Product/StyleWith/StyleWith.module.css
+++ b/leblanc/components/Product/StyleWith/StyleWith.module.css
@@ -22,3 +22,9 @@
     @apply w-full h-full;
   }
 }
+
+:global(.dark) {
+  & .caption {
+    @apply border-primary text-secondary-2;
+  }
+}
